zero-schema-macros/tests/ui/fail/63_optional_c_str.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<&'static std::ffi::CStr>,
}

fn main() {}
