zero-schema-macros/tests/ui/fail/63_optional_c_str.stderr
error: Option<T> cannot use string or fixed-byte T because the all-zero wire can be valid
 --> tests/ui/fail/63_optional_c_str.rs:5:19
  |
5 |     value: Option<&'static std::ffi::CStr>,
  |                   ^
